defined handler for api moved changed some requests from POST to PUT for idempotency
